--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,13 @@
     <nav class="menu">
         <h2 class="menu-h2">Users</h2>
         <a href="{{ site.baseurl }}/">Merchant List</a>
-        <a href="{{ site.baseurl }}/listing_tool">Listing Tool</a>
-        <a href="{{ site.baseurl }}/payment_gateways">Payment Gateways</a>
-        <a href="{{ site.baseurl }}/donation_buttons">Donation buttons</a>
-        <a href="{{ site.baseurl }}/listing_guidelines.html">Listing Guidelines</a>
+        <a href="{{ site.baseurl }}/listing-tool">Listing Tool</a>
+        <a href="{{ site.baseurl }}/payment-gateways">Payment Gateways</a>
+        <a href="{{ site.baseurl }}/donation-buttons">Donation buttons</a>
+        <a href="{{ site.baseurl }}/listing-guidelines.html">Listing Guidelines</a>
         <a href="{{ site.baseurl }}/guide">User Guide</a>
         <h2 class="menu-h2">Maintainers</h2> 
-        <a href="{{ site.baseurl }}/listing_decoder">Listing Decoder</a>
+        <a href="{{ site.baseurl }}/listing-decoder">Listing Decoder</a>
         <a href="https://github.com/ARRRmada/ARRRmada.com" target="_blank" rel="noopener noreferrer">GitHub Readme</a>
         <a href="{{ site.baseurl }}/guide#maintainer">Maintainer Guide</a>
         <h2 class="menu-h2">Misc</h2> 
