--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,12 +29,7 @@
     <meta name="twitter:image" content="{{ site.baseurl }}/assets/img/site/arrrmada.jpg" />
 
     <!--Link Tags-->
-    {% if page.permalink %}
-      <link rel="canonical" href="https://arrrmada.com{{ page.permalink }}" />
-    {% else %}
-      <link rel="canonical" href="https://arrrmada.com{{ page.url }}" />
-    {% endif %}
-
+    <link rel="canonical" href="https://arrrmada.com{{ page.permalink | default: page.url }}" />
     <link rel="icon" href="{{ site.baseurl }}/assets/img/site/Pirate_Logo_Ship_Gold.svg" sizes="any" type="image/svg+xml" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/global.css" />
     {% include links.html %}
