--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,12 +7,8 @@
     <meta name="author" content="Pirate Chain" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#151326" />
-    <!--Protect form being classed as duplicate content-->
-    {% if site.url == "https://arrrmada.com" %}
-    <meta name="robots" content="index, follow" />
-    {% else %}
-    <meta name="robots" content="index, nofollow" />
-    {% endif %}
+    <!--Help protect pages being classed as duplicate content-->
+    <meta name="robots" content="index, {{ site.url == 'https://arrrmada.com' | ternary: 'follow', 'nofollow' }}" />
 
     <!--Open Graph Tags-->
     <meta property="og:locale" content="en_US" />
