--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -1,9 +1,9 @@
 #faq h1 {
   margin-bottom:4rem;
 }
-#faq h2 {
+#faq .faq-item h2 {
   margin-bottom:1rem;
 }
-#faq p {
+#faq .faq-item p {
 margin-bottom:2rem;
 }
