--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
         <a href="{{ site.baseurl }}/donation-buttons">Donation buttons</a>
         <a href="{{ site.baseurl }}/listing-guidelines.html">Listing Guidelines</a>
         <a href="{{ site.baseurl }}/guide">User Guide</a>
+        <a href="{{ site.baseurl }}/faq">FAQ</a>
         <h2 class="menu-h2">Maintainers</h2> 
         <a href="{{ site.baseurl }}/listing-decoder">Listing Decoder</a>
         <a href="https://github.com/ARRRmada/ARRRmada.com" target="_blank" rel="noopener noreferrer">GitHub Readme</a>
