--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -1,5 +1,6 @@
 .hero-section .section-wrapper {
   max-width: 1200px;
+  margin: 0 auto;
 }
 .hero-section .section-wrapper h1 {
   text-align:left;
