--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -1,18 +1,18 @@
-.hero-section .section-wrapper {
+.section-wrapper {
   max-width: 1200px;
   margin: 0 auto;
 }
-.hero-section .section-wrapper h1 {
-  text-align:left;
+.section-wrapper h1 {
+  text-align: left;
 }
 #faq {
-  margin:6rem auto;
+  margin: 6rem auto;
   max-width: 1200px;
 }
-#faq .faq-item h2 {
-  margin-bottom:1rem;
+.faq-item h2 {
+  margin-bottom: 1rem;
   color: var(--pirate-doubloon);
 }
-#faq .faq-item p {
-margin-bottom:2rem;
+.faq-item p {
+margin-bottom: 2rem;
 }
