--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,12 @@
     <meta name="author" content="Pirate Chain" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#151326" />
+    <!--Help protect pages being classed as duplicate content-->
+    {% if site.url == "https://arrrmada.com" %}
     <meta name="robots" content="index, follow" />
+    {% else %}
+    <meta name="robots" content="index, nofollow" />
+    {% endif %}
 
     <!--Open Graph Tags-->
     <meta property="og:locale" content="en_US" />
@@ -29,7 +34,7 @@
     <meta name="twitter:image" content="{{ site.baseurl }}/assets/img/site/arrrmada.jpg" />
 
     <!--Link Tags-->
-    <link rel="canonical" href="https://arrrmada.com/" />
+    <link rel="canonical" href="https://arrrmada.com{{ page.permalink | default: page.url }}" />
     <link rel="icon" href="{{ site.baseurl }}/assets/img/site/Pirate_Logo_Ship_Gold.svg" sizes="any" type="image/svg+xml" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/global.css" />
     {% include links.html %}
