--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Pirate Chain" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#151326" />
-    <!--Help protect pages being classed as duplicate content-->
+    {% comment %} Help protect pages being classed as duplicate content {% endcomment %}
     {% if site.url == "https://arrrmada.com" %}
     <meta name="robots" content="index, follow" />
     {% else %}
