Added social icons and improved text

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,18 +13,40 @@
     <div class="footer-columns">
       <h2 class="footer-heading">Privacy</h2>
     <p>
-    ARRRmada.com is open source and maintained by the
-    community. Help improve this site on <a href="{{ site.readme }}" target="_blank" rel="noopener noreferrer">Github</a>!
+    By using Pirate Chain as an payment gateway, you are ensuring that people that value their human right to privacy are able to trade with you, helping increase your customer base. Find out more about Pirate Chain payment technology <a href="https://piratechain.net" target="_blank" rel="noopener noreferrer">here</a>!
     </p>
   </div>
     <div class="footer-columns">
       <h2 class="footer-heading">Community</h2>
-     <p>For all inquiries, questions, and discussions, chat with us in the community <a href="https://pirate.black/discord" target="_blank" rel="noopener noreferrer">DISCORD</a></p>
+     <p>For all inquiries, questions, and discussions, chat with us in the community <a href="https://chat.piratechain.net" target="_blank" rel="noopener noreferrer">Discord</a></p>
    </div>
   </div>
 </div>
 <div class="sub-footer-wrap">
-<div class="sub-footer"><span>Social Media: 🟢🔵🟡🟣</span> <span><a>Privacy Policy</a></span><span><a>Terms</a></span> <span><a>FAQ</a></span></div>
+<div class="sub-footer">
+ <span>Social Media:
+  <div class="pirate-social-icons">
+    <p>Social Media:</p>
+    <a href="https://x.com/PirateARRRmada" target="_blank" rel="noopener noreferrer">
+        <img src="assets/img/logos/x-logo.svg" alt="X Link Icon" title="X Link Icon">
+    </a>
+    <a href="https://chat.piratechain.net" target="_blank" rel="noopener noreferrer">
+        <img src="assets/img/logos/discord-mark-blue-logo.svg" alt="Discord Link Icon" title="Discord Link Icon">
+    </a>
+    <a href="https://github.com/ARRRmada/" target="_blank" rel="noopener noreferrer">
+        <img src="assets/img/logos/github-mark.svg" alt="GitHub Link Icon" title="GitHub Link Icon">
+    </a>
+    <a href="https://t.me/+Obq53Fel8bUxMDNh" target="_blank" rel="noopener noreferrer">
+        <img src="assets/img/logos/telegram-logo.svg" alt="Telegram Link Icon" title="Telegram Link Icon">
+    </a>
+ </div>
+ </span>
+  <span>
+  <a href="https://github.com/ARRRmada/ARRRmada.com/blob/main/README.md" target="_blank" rel="noopener noreferrer">ReadMe.md</a>
+  </span>
+  <span><a href="{{ site.faq }}" target="_blank" rel="noopener noreferrer">FAQ</a>
+  </span>
+ </div>
 </div>
 
 </footer>
