Corrected image file paths

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,16 +28,16 @@
   <div class="pirate-social-icons">
     <p>Social Media:</p>
     <a href="https://x.com/PirateARRRmada" target="_blank" rel="noopener noreferrer">
-        <img src="assets/img/logos/x-logo.svg" alt="X Link Icon" title="X Link Icon">
+        <img src="assets/img/logo/x-logo.svg" alt="X Link Icon" title="X Link Icon">
     </a>
     <a href="https://chat.piratechain.net" target="_blank" rel="noopener noreferrer">
-        <img src="assets/img/logos/discord-mark-blue-logo.svg" alt="Discord Link Icon" title="Discord Link Icon">
+        <img src="assets/img/logo/discord-mark-blue-logo.svg" alt="Discord Link Icon" title="Discord Link Icon">
     </a>
     <a href="https://github.com/ARRRmada/" target="_blank" rel="noopener noreferrer">
-        <img src="assets/img/logos/github-mark.svg" alt="GitHub Link Icon" title="GitHub Link Icon">
+        <img src="assets/img/logo/github-mark.svg" alt="GitHub Link Icon" title="GitHub Link Icon">
     </a>
     <a href="https://t.me/+Obq53Fel8bUxMDNh" target="_blank" rel="noopener noreferrer">
-        <img src="assets/img/logos/telegram-logo.svg" alt="Telegram Link Icon" title="Telegram Link Icon">
+        <img src="assets/img/logo/telegram-logo.svg" alt="Telegram Link Icon" title="Telegram Link Icon">
     </a>
  </div>
  </span>
