--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,11 +1,12 @@
 /* ----- fonts ----- */
-@font-face { 
-    font-family: 'Bai Jamjuree'; 
-    src: url("../fonts/Bai_Jamjuree/BaiJamjuree-SemiBold.ttf") format('truetype'); 
+@font-face {
+    font-family: 'Bai Jamjuree';
+    src: url("../fonts/Bai_Jamjuree/BaiJamjuree-SemiBold.ttf") format('truetype');
 }
-@font-face { 
-    font-family: 'Poppins'; 
-    src: url("../fonts/Poppins/Poppins-Regular.ttf") format('truetype'); 
+
+@font-face {
+    font-family: 'Poppins';
+    src: url("../fonts/Poppins/Poppins-Regular.ttf") format('truetype');
 }
 
 @font-face {
@@ -43,9 +44,9 @@
     font-style: normal;
 }
 
-@font-face { 
-    font-family: 'IBM Plex Mono'; 
-    src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-Regular.ttf") format('truetype'); 
+@font-face {
+    font-family: 'IBM Plex Mono';
+    src: url("../fonts/IBM_Plex_Mono/IBMPlexMono-Regular.ttf") format('truetype');
 }
 
 /* ----- vars ----- */
@@ -59,27 +60,28 @@
     --pirate-deepblue: #171621;
     --pirate-navyblue: #202036;
     --pirate-royalblue: #201633;
-    --pirate-smoke-blue: #292c36;  
-    
+    --pirate-smoke-blue: #292c36;
+
     --pirate-darkseas: #071642;
     --pirate-crest: #082db2;
     --pirate-gale: #2f3341;
     --pirate-purple-haze: #3e4459;
     --pirate-storm: #2f3466ff;
-    --pirate-smoke:#b1afb7;
+    --pirate-smoke: #b1afb7;
     --pirate-fog: #d4d4d4;
-    --pirate-mist: #c3c3c9; 
-    --pirate-cloud: #ffffff;  
+    --pirate-mist: #c3c3c9;
+    --pirate-cloud: #ffffff;
 
     --pirate-font-primary: 'Bai Jamjuree';
     --pirate-font-secondary: 'Roboto', sans-serif;
-    --pirate-font-tertiary:'IBM Plex Mono', sans-serif;
+    --pirate-font-tertiary: 'IBM Plex Mono', sans-serif;
     --pirate-font-alternative: 'Poppins';
 
-    --lighter-grey: #4b5056 ;
+    --lighter-grey: #4b5056;
     --darker-grey: #33373a;
 
-    --dark: #23252d; /* #242526; */
+    --dark: #23252d;
+    /* #242526; */
     --darkest: rgb(29, 29, 29);
     --text-main: #a2a6ad;
     --discord-color: #5865ed;
@@ -87,80 +89,97 @@
     --pancake-blue: #24cad6;
 
     --button-hover: var(--pirate-goldensands);
-    --button-color: var(--pirate-neon); 
+    --button-color: var(--pirate-neon);
     --nav-hover: #3A3B3C;
-    
+
     --page-width-normal: 1200px;
     --page-width-wide: 1500px;
     --page-width-wider: 1800px;
 
-    --lighten-filter: brightness(1.15) saturate(1.5) hue-rotate(357deg) contrast(.9);;
+    --lighten-filter: brightness(1.15) saturate(1.5) hue-rotate(357deg) contrast(.9);
+    ;
 }
+
 /*
 [data-theme="light"] {
 
  
   }
 */
-  .brighten {
-    filter:var(--lighten-filter)
-  }
-  .brighten .description-section .description .btn {
+.brighten {
+    filter: var(--lighten-filter)
+}
+
+.brighten .description-section .description .btn {
     background-color: #cf9926;
-  }
-  .brighten .tag-btn:hover, .brighten #tag-buttons button:hover {
+}
+
+.brighten .tag-btn:hover,
+.brighten #tag-buttons button:hover {
     background-color: #db9b11;
-  }
+}
+
 /* ----- main ----- */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 html {
-    background-color: var(--darkest); 
-    width: 100%; 
-    height: 100%; 
+    background-color: var(--darkest);
+    width: 100%;
+    height: 100%;
     min-width: 280px;
-    scroll-behavior: smooth; 
+    scroll-behavior: smooth;
 }
+
 body {
     font-size: 16px;
     letter-spacing: 0.7px;
     color: var(--text-main);
     font-family: var(--pirate-font-alternative);
-    overflow-x: hidden;     
+    overflow-x: hidden;
 }
+
 a {
     color: var(--pirate-doubloon);
     text-decoration: none;
 }
+
 a:hover {
     color: var(--pirate-neon)
 }
+
 a:-webkit-any-link {
     cursor: pointer;
- }
+}
+
 h1 {
-    color: var(--pirate-doubloon);;
+    color: var(--pirate-doubloon);
+    ;
     font-size: 48px;
     font-family: var(--pirate-font-primary);
 }
+
 h2 {
     font-size: 29px;
     font-weight: 200;
     color: var(--pirate-cloud);
     font-family: var(--pirate-font-primary);
 }
+
 h3 {
     color: var(--pirate-cloud);
     font-family: var(--pirate-font-secondary);
 }
-.content{
+
+.content {
     max-width: var(--page-width-wide);
-    margin: auto;    
+    margin: auto;
     height: auto;
 }
+
 .content-wide {
     max-width: var(--page-width-wider);
     display: grid;
@@ -172,7 +191,8 @@ h3 {
     overflow: hidden;
 }
 
-.btn, .btn-alt {
+.btn,
+.btn-alt {
     padding: 10px 18px;
     border: none;
     display: inline-block;
@@ -183,22 +203,27 @@ h3 {
     text-align: center;
     color: var(--pirate-mist);
     border-radius: 4px;
-  }
-  .btn:hover {
+}
+
+.btn:hover {
     color: var(--pirate-leviathan);
     background-color: var(--pirate-neon);
     font-weight: bold;
 }
+
 .btn {
     background-color: var(--pirate-gale);
 }
+
 .btn-alt {
     background-color: var(--pirate-purple-haze);
+
     &:hover {
-        background:var(--pirate-doubloon);
-        color:var(--pirate-gale)
+        background: var(--pirate-doubloon);
+        color: var(--pirate-gale)
     }
 }
+
 .red-font {
     color: var(--red-highlight);
 }
@@ -208,24 +233,27 @@ h3 {
 .hero-section {
     position: relative;
     padding-bottom: 160px;
-    padding-top: 120px;    
+    padding-top: 120px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     text-align: center;
     background: var(--pirate-gale);
 }
+
 .hero-section .logo {
     width: 100%;
-    max-width: 180px;     
+    max-width: 180px;
 }
+
 .hero-section h1 {
     font-family: var(--pirate-font-primary);
     font-size: 60px;
     margin-top: 5px;
     color: var(--pirate-doubloon)
 }
-.hero-section h1 .arrr{
+
+.hero-section h1 .arrr {
     color: var(--pirate-doubloon);
     font-weight: bold;
 }
@@ -234,6 +262,7 @@ h3 {
     color: var(--pirate-cloud);
     font-size: 28px;
 }
+
 .hero-section p {
     margin-top: 20px;
     margin-bottom: 40px;
@@ -241,10 +270,12 @@ h3 {
     font-size: 18px;
     width: 100%;
     max-width: 800px;
-} 
+}
+
 .waves {
     padding: 100px 0px 60px;
 }
+
 /* ----- backtotop button ----- */
 #return-to-top {
     opacity: 0;
@@ -268,23 +299,28 @@ h3 {
     scrollbar-width: auto;
     scrollbar-color: var(--pirate-doubloon) #262626;
 }
+
 *::-webkit-scrollbar {
     width: 15px;
     background: #262626;
-}  
+}
+
 *::-webkit-scrollbar-track {
     background: #262626;
     border-radius: 3px;
-}  
+}
+
 *::-webkit-scrollbar-thumb {
     background-color: #393939;
     border-radius: 3px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
     background: var(--pirate-doubloon) !important;
 }
+
 ::-webkit-scrollbar-corner {
-    background: rgba(0,0,0,0);
+    background: rgba(0, 0, 0, 0);
 }
 
 /* ---- Copy Text Button ----- */
@@ -301,32 +337,36 @@ h3 {
     cursor: pointer;
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
-    -ms-filter: grayscale(100%); 
+    -ms-filter: grayscale(100%);
     -o-filter: grayscale(100%);
-    filter: grayscale(100%); 
+    filter: grayscale(100%);
     filter: gray;
 }
+
 #copyButton:hover {
-    -webkit-filter: grayscale(0%); 
-    -moz-filter: grayscale(0%); 
-    -ms-filter: grayscale(0%); 
-    -o-filter: grayscale(0%); 
+    -webkit-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    -ms-filter: grayscale(0%);
+    -o-filter: grayscale(0%);
     filter: grayscale(0%);
-    filter: none; 
-    border: 2px solid rgb(0, 255, 0); 
+    filter: none;
+    border: 2px solid rgb(0, 255, 0);
 }
+
 #copiedText {
     position: absolute;
     right: -15px;
     top: -20px;
     transition: opacity 1s;
-    color: #fff; 
+    color: #fff;
     font-size: 12px;
     pointer-events: none;
 }
+
 #copiedText.show {
     opacity: 1;
 }
+
 #copiedText.hidden {
     opacity: 0;
 }
@@ -337,12 +377,14 @@ h3 {
     max-width: 600px;
     text-align: center;
 }
+
 .container-404 h1 {
     margin: 100px 0 20px;
     font-size: 7em;
     line-height: 1;
     letter-spacing: -1px;
 }
+
 .container-404 .btn {
     margin-top: 60px;
 }
@@ -357,6 +399,7 @@ h3 {
     z-index: 300;
     min-width: 205px;
 }
+
 .header .open-close__btn {
     display: flex;
     align-items: center;
@@ -374,8 +417,15 @@ h3 {
     font-weight: 900;
     cursor: pointer;
     transition-duration: .5s;
-    &:hover {background: var(--pirate-smoke-blue); color:var(--pirate-doubloon); transform:rotate(359deg); transition-duration: .5s;}
+
+    &:hover {
+        background: var(--pirate-smoke-blue);
+        color: var(--pirate-doubloon);
+        transform: rotate(359deg);
+        transition-duration: .5s;
+    }
 }
+
 .menu-top {
     display: flex;
     flex-direction: row;
@@ -390,6 +440,7 @@ h3 {
     border-radius: 0 0.3rem 0.3rem 0;
     z-index: 99;
 }
+
 .menu {
     display: none;
     width: 100%;
@@ -397,10 +448,11 @@ h3 {
     flex-direction: column;
     padding: 1rem;
     box-shadow: 3px 3px 20px rgb(0 0 0 / 25%);
-    border-radius: 0 0.4rem 0.4rem 0.4rem ;
+    border-radius: 0 0.4rem 0.4rem 0.4rem;
     border: 1px solid var(--darker-grey);
     margin-left: -1px;
 }
+
 .menu h2 {
     font-size: 29px;
     font-weight: 200;
@@ -411,10 +463,12 @@ h3 {
     padding: 0.2rem 0.8rem;
     margin: 0.5rem 0;
 }
+
 .menu h2:first-of-type {
-    margin-top:0;
+    margin-top: 0;
     margin-bottom: 0.5rem;
 }
+
 .menu a {
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
@@ -422,13 +476,16 @@ h3 {
     color: var(--pirate-mist);
     line-height: 1.5rem;
     padding-left: 0.5rem;
-    &:hover{color:var(--pirate-doubloon);}
+
+    &:hover {
+        color: var(--pirate-doubloon);
+    }
 }
 
 /* ----- footer ----- */
 
 footer {
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     background-color: var(--darkest);
@@ -436,70 +493,98 @@ footer {
     width: 100%;
     overflow: hidden;
 }
-.main-footer-wrap, .sub-footer-wrap {
+
+.main-footer-wrap,
+.sub-footer-wrap {
     display: flex;
     justify-content: space-evenly;
     width: 100%;
 }
-.main-footer, .sub-footer {
+
+.main-footer,
+.sub-footer {
     display: flex;
     align-items: center;
     width: 100%;
-    max-width: var(--page-width-wide);    
+    max-width: var(--page-width-wide);
 }
 
 .main-footer {
     padding: 2.4rem 0 3.2rem;
     font-size: .8rem;
     justify-content: space-between;
-    gap:1rem;
-    min-width: 200px;;
+    gap: 1rem;
+    min-width: 200px;
+    ;
 }
+
 .footer-columns {
     max-width: 400px;
-    max-width: 400px;
+    height: 100%;
     background: #3739477d;
-    /* background: var(--pirate-gale); */
     padding: 1rem 1.6rem;
     border-radius: .3rem;
-    @media (max-width: 1400px) {max-width: 300px;}
-    @media (max-width: 970px) {max-width: 100%;}
+
+    @media (max-width: 1400px) {
+        max-width: 300px;
+    }
+
+    @media (max-width: 970px) {
+        max-width: 100%;
+    }
 }
+
 .sub-footer-wrap {
     background-color: #1f1e20;
 }
+
 .sub-footer {
     padding: 0.5rem 0;
     font-size: .8rem;
     justify-content: flex-start;
-   }
+}
+
 .sub-footer span {
     padding-right: .65rem;
 }
+
 .sub-footer span:last-child {
     padding-right: 0;
 }
+
 .sub-footer .pirate-social-icons {
     display: inline-flex;
-    align-items: center;    
+    align-items: center;
+    gap:.7rem;
 }
+
 .sub-footer .pirate-social-icons img {
-    height: auto;
-    width: 24px;
+    height: 17px;
 }
+
+.sub-footer .pirate-social-icons .x-logo img {
+    height: 14px;
+}
+
+.sub-footer .pirate-social-icons .telegram-logo img {
+    height: 18px;
+}
+
 footer .arrrmada {
     width: 100%;
     max-width: 150px;
     display: block;
-    margin-bottom: 20px ;
+    margin-bottom: 20px;
 }
+
 footer .discord {
     width: 100%;
     max-width: 150px;
     display: block;
     margin-top: 5px;
-    margin-bottom: 20px ;
+    margin-bottom: 20px;
 }
+
 .footer-heading {
     text-transform: uppercase;
     font-weight: 900;
@@ -509,9 +594,13 @@ footer .discord {
     padding: 0.3rem 1.5rem;
     border-radius: 6px;
     margin-bottom: 1.7rem;
-    color:var(--pirate-smoke);
+    color: var(--pirate-smoke);
 }
-.content, .content-wide, .main-footer, .sub-footer {
+
+.content,
+.content-wide,
+.main-footer,
+.sub-footer {
     @media (max-width: 1700px) {
         justify-content: center;
         flex-wrap: wrap;
@@ -520,6 +609,7 @@ footer .discord {
         text-align: center;
     }
 }
+
 input:hover:not([type=checkbox]):not([type=file]),
 textarea:hover,
 input:focus-visible,
@@ -534,68 +624,83 @@ textarea:focus-visible {
     height: 60px;
     max-height: 60px;
     margin: 0;
-    z-index:5;
-    left:0px;
-    float:left;
-}  
-.parallax1 > use {
+    z-index: 5;
+    left: 0px;
+    float: left;
+}
+
+.parallax1>use {
     animation: move-forever1 10s linear infinite;
 }
+
 .parallax1:nth-child(1) {
     animation-delay: -2s;
 }
 
-.parallax2 > use {
+.parallax2>use {
     animation: move-forever2 8s linear infinite;
 }
+
 .parallax2:nth-child(1) {
     animation-delay: -2s;
 }
-.parallax3 > use {
+
+.parallax3>use {
     animation: move-forever3 6s linear infinite;
 }
+
 .parallax3:nth-child(1) {
     animation-delay: -2s;
-}  
-.parallax4 > use {
+}
+
+.parallax4>use {
     animation: move-forever4 4s linear infinite;
 }
+
 .parallax4:nth-child(1) {
-        animation-delay: -2s;
-    }  
+    animation-delay: -2s;
+}
+
 @keyframes move-forever1 {
     0% {
         transform: translate(85px, 0%);
     }
+
     100% {
         transform: translate(-90px, 0%);
     }
-    }
-    @keyframes move-forever2 {
+}
+
+@keyframes move-forever2 {
     0% {
         transform: translate(-90px, 0%);
     }
-    100% {
-        transform: translate(85px, 0%);
-    }
-    }
-    @keyframes move-forever3 {
-    0% {
-        transform: translate(85px, 0%);
-    }
-    100% {
-        transform: translate(-90px, 0%);
-    }
-    }
-    @keyframes move-forever4 {
-    0% {
-        transform: translate(-90px, 0%);
-    }
+
     100% {
         transform: translate(85px, 0%);
     }
 }
-  
+
+@keyframes move-forever3 {
+    0% {
+        transform: translate(85px, 0%);
+    }
+
+    100% {
+        transform: translate(-90px, 0%);
+    }
+}
+
+@keyframes move-forever4 {
+    0% {
+        transform: translate(-90px, 0%);
+    }
+
+    100% {
+        transform: translate(85px, 0%);
+    }
+}
+
 /* ----- boxes animation ----- */
 .boxes div {
     position: absolute;
@@ -604,65 +709,75 @@ textarea:focus-visible {
     background-color: transparent;
     border: 2px solid #fff
 }
+
 .boxes div:nth-child(1) {
     top: 70%;
     left: 10%;
     animation: box-animate 10s infinite
 }
+
 .boxes div:nth-child(2) {
     top: 20%;
     left: 80%;
     animation: box-animate 9s infinite
 }
+
 .boxes div:nth-child(3) {
     top: 50%;
     left: 50%;
     animation: box-animate 6s infinite
 }
+
 .boxes div:nth-child(4) {
     top: 80%;
     left: 60%;
     animation: box-animate 15s infinite
 }
+
 .boxes div:nth-child(5) {
     top: 30%;
     left: 30%;
     animation: box-animate 9s infinite
 }
+
 .boxes div:nth-child(6) {
     top: 90%;
     left: 90%;
     animation: box-animate 12s infinite
 }
+
 .boxes div:nth-child(7) {
     top: 80%;
     left: 30%;
     animation: box-animate 2s infinite
 }
+
 .boxes div:nth-child(8) {
     top: 40%;
     left: 20%;
     animation: box-animate 2s infinite
 }
+
 .boxes div:nth-child(9) {
     top: 50%;
     left: 80%;
     animation: box-animate 2s infinite
 }
+
 @keyframes box-animate {
     0% {
         transform: scale(0) translateY(0) rotate(0);
         opacity: 1
     }
+
     100% {
         transform: scale(1.3) translateY(-90px) rotate(360deg);
         opacity: 0
     }
 }
+
 @media screen and (max-width:640px) {
     .boxes {
-       display: none;           
+        display: none;
     }
 }
-
-
