--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,19 +6,18 @@
       <div class="footer-columns">
         <h2 class="footer-heading">ARRRmada</h2>
       <p>
-      ARRRmada.com is open source and maintained by the
-      community. Help improve this site on <a href="{{ site.readme }}" target="_blank" rel="noopener noreferrer">Github</a>!
+      ARRRmada.com is an open source project and maintained by the Pirate Chain community. You can help maintain and improve this ARRRmada via our <a href="{{ site.readme }}" target="_blank" rel="noopener noreferrer">Github</a> repository.
       </p>
     </div>
     <div class="footer-columns">
       <h2 class="footer-heading">Privacy</h2>
     <p>
-    By using Pirate Chain as an payment gateway, you are ensuring that people that value their human right to privacy are able to trade with you, helping increase your customer base. Find out more about Pirate Chain payment technology <a href="https://piratechain.net" target="_blank" rel="noopener noreferrer">here</a>!
+    By using Pirate Chain as a payment gateway, you're ensuring that people who value their human right to privacy are able to trade with you, helping increase your customer base. Find out more <a href="https://piratechain.net" target="_blank" rel="noopener noreferrer">here</a>!
     </p>
   </div>
     <div class="footer-columns">
       <h2 class="footer-heading">Community</h2>
-     <p>For all inquiries, questions, and discussions, chat with us in the community <a href="https://chat.piratechain.net" target="_blank" rel="noopener noreferrer">Discord</a></p>
+     <p>For all inquiries, questions, and discussions, chat with us in the Pirate Chain community <a href="https://chat.piratechain.net" target="_blank" rel="noopener noreferrer">Discord</a> server, where you can chat to the team and like minded community members</p>
    </div>
   </div>
 </div>
@@ -27,16 +26,16 @@
  <span>Social Media:
   <div class="pirate-social-icons">
     <p>Social Media:</p>
-    <a href="https://x.com/PirateARRRmada" target="_blank" rel="noopener noreferrer">
+    <a href="https://x.com/PirateARRRmada" class="x-logo" target="_blank" rel="noopener noreferrer">
         <img src="assets/img/logo/x-logo.svg" alt="X Link Icon" title="X Link Icon">
     </a>
-    <a href="https://chat.piratechain.net" target="_blank" rel="noopener noreferrer">
+    <a href="https://chat.piratechain.net" class="discord-logo" target="_blank" rel="noopener noreferrer">
         <img src="assets/img/logo/discord-mark-blue-logo.svg" alt="Discord Link Icon" title="Discord Link Icon">
     </a>
-    <a href="https://github.com/ARRRmada/" target="_blank" rel="noopener noreferrer">
-        <img src="assets/img/logo/github-mark.svg" alt="GitHub Link Icon" title="GitHub Link Icon">
+    <a href="https://github.com/ARRRmada/" class="github-logo" target="_blank" rel="noopener noreferrer">
+        <img src="assets/img/logo/github-mark-white-logo.svg" alt="GitHub Link Icon" title="GitHub Link Icon">
     </a>
-    <a href="https://t.me/+Obq53Fel8bUxMDNh" target="_blank" rel="noopener noreferrer">
+    <a href="https://t.me/+Obq53Fel8bUxMDNh" class="telegram-logo" target="_blank" rel="noopener noreferrer">
         <img src="assets/img/logo/telegram-logo.svg" alt="Telegram Link Icon" title="Telegram Link Icon">
     </a>
  </div>
