--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,13 +6,13 @@
       <div class="footer-columns">
         <h2 class="footer-heading">ARRRmada</h2>
       <p>
-      ARRRmada.com is an open source project and maintained by the Pirate Chain community. You can help maintain and improve this ARRRmada via our <a href="{{ site.readme }}" target="_blank" rel="noopener noreferrer">Github</a> repository.
+      ARRRmada.com is an open source project and maintained by the Pirate Chain community. You can help maintain and improve ARRRmada via our <a href="{{ site.readme }}" target="_blank" rel="noopener noreferrer">Github</a> repository.
       </p>
     </div>
     <div class="footer-columns">
       <h2 class="footer-heading">Privacy</h2>
     <p>
-    By using Pirate Chain as a payment gateway, you're ensuring that people who value their human right to privacy are able to trade with you, helping increase your customer base. Find out more <a href="https://piratechain.net" target="_blank" rel="noopener noreferrer">here</a>!
+    By using Pirate Chain as a payment gateway, you're ensuring the people who value their human right to privacy are able to trade with you, helping increase your customer base. Find out more <a href="https://piratechain.net" target="_blank" rel="noopener noreferrer">here</a>.
     </p>
   </div>
     <div class="footer-columns">
@@ -23,9 +23,9 @@
 </div>
 <div class="sub-footer-wrap">
 <div class="sub-footer">
- <span>Social Media:
+ <span>
   <div class="pirate-social-icons">
-    <p>Social Media:</p>
+    Social Media: 
     <a href="https://x.com/PirateARRRmada" class="x-logo" target="_blank" rel="noopener noreferrer">
         <img src="assets/img/logo/x-logo.svg" alt="X Link Icon" title="X Link Icon">
     </a>
