--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -7,11 +7,26 @@
 }
 #faq {
   margin: 6rem auto;
-  max-width: 777px;
+  max-width: 1000px;
 }
 .faq-item h2 {
   margin-bottom: 1rem;
-  color: var(--pirate-doubloon);
+  border-bottom: 2px solid #000;
+  background:#BB9645;
+  color:#000;
+  display:inline-block;
+  padding:3px 15px;
+  margin-left:10px;
+}
+h2:after{
+  left:0px;
+  display:block;
+  position:absolute;
+  width:100%;
+  height:3px;
+  margin-top:2px;
+  content: " ";
+  background:#BB9645;
 }
 .faq-item p {
 margin-bottom: 2rem;
