--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -25,8 +25,7 @@ h2:after{
   width:100%;
   height:3px;
   margin-top:2px;
-  content: " ";
-  background:#BB9645;
+  background:#fff;
 }
 .faq-item p {
 margin-bottom: 2rem;
