--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -11,26 +11,11 @@
 }
 .faq-item h2 {
   margin-bottom: 1rem;
-  border-bottom: 2px solid #000;
-  background:#BB9645;
-  color:#000;
-  display:inline-block;
-  padding:3px 15px;
-  margin-left:10px;
-}
-h2:after{
-  left:0px;
-  display:block;
-  position:absolute;
-  width:100%;
-  height:3px;
-  margin-top:2px;
-  background:#fff;
+  color: var(--pirate-doubloon);
 }
 .faq-item p {
 margin-bottom: 2rem;
 }
-
 
 /* ----- faq-description  section ----- */
 .faq-description {
