improve listing_tool final step

--- a/assets/css/merchant.css
+++ b/assets/css/merchant.css
@@ -163,6 +163,9 @@ input[type=file]::file-selector-button {
 #submitListing p {
     margin-top: 20px;
 }
+#submitListing .btn {
+    margin-top: 40px;
+}
 
 /* ----- listing decoder section ----- */
 .decoder-section {
