--- a/assets/css/merchant.css
+++ b/assets/css/merchant.css
@@ -166,6 +166,10 @@ input[type=file]::file-selector-button {
 #submitListing .btn {
     margin-top: 40px;
 }
+#submitListing .alt_options {
+    margin-top:40px;
+    display: block;
+}
 
 /* ----- listing decoder section ----- */
 .decoder-section {
